--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -51,7 +51,6 @@
 
             <div id="startStage" class="startStage stage">
                 <input type="button" id="startMenu" class="startButton" value="Start" />
-                <input type="file" accept=""/>
             </div>
 
             <div id="wordStage" class="js-wordStage stage hidden">
@@ -63,7 +62,7 @@
                         <label id="character"></label>
                     </div>
                     <div class="voiceRecord">
-                        <audio id="voice" controls="controls"></audio>
+                        <audio id="voice"></audio>
                     </div>
                     <!--<button type="button" id="playSound" class="sound">
                         <span></span>
