test user input

--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -62,6 +62,8 @@
                 <div>
                     <div id="characterTest" class="characterTest hidden">
                         <input type="text" id="userCharacterInput" />
+                        <br />
+                        <a id="characterHint" class="characterHint hidden">look at character?</a>
                     </div>
                     <div id="characterView" class="js-wordCharacter characterView">
                         <label id="character"></label>
