fix bug character test hint

--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -63,7 +63,7 @@
                     <div id="characterTest" class="characterTest hidden">
                         <input type="text" id="userCharacterInput" />
                         <br />
-                        <a id="characterHint" class="characterHint hidden">look at character?</a>
+                        <a id="characterHint" class="characterHint hidden">hint?</a>
                     </div>
                     <div id="characterView" class="js-wordCharacter characterView">
                         <label id="character"></label>
