show explaination under word character

--- a/langstyle/ui/index.html
+++ b/langstyle/ui/index.html
@@ -66,7 +66,12 @@
                         <a id="characterHint" class="characterHint hidden">hint?</a>
                     </div>
                     <div id="characterView" class="js-wordCharacter characterView">
-                        <label id="character"></label>
+                        <div class="characterCode">
+                            <label id="character"></label>
+                        </div>
+                        <div class="characterExplaination">
+                            <label id="characterExplaination"></label>
+                        </div>
                     </div>
                     <div class="voiceRecord hidden">
                         <audio id="voice"></audio>
